fix tab spacing in css file

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -22,7 +22,7 @@ $breakpoints: (
 		medium: 60em,
 	// 760px,
 		large: 61.25em,
-	// 980px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
+	// 980px,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 /*----------------------------
@@ -254,10 +254,7 @@ body {
 		gap: 1.5rem;
 		grid-template-rows: repeat(auto, auto);
 		grid-template-columns: repeat(3, 1fr);
-		grid-template-areas:
-			"t1 t1 t3"
-			"t2 t4 t4"
-			"t5 t5 t5";
+		grid-template-areas: "t1 t1 t3" "t2 t4 t4" "t5 t5 t5";
 	}
 
 	.testimonial {
@@ -272,8 +269,6 @@ body {
 	.testimonials-grid {
 		gap: 2rem;
 		grid-template-columns: repeat(4, 1fr);
-		grid-template-areas:
-			"t1 t1 t2 t5"
-			"t3 t4 t4 t5";
+		grid-template-areas: "t1 t1 t2 t5" "t3 t4 t4 t5";
 	}
 }
